# creole-creamery-scraper

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  deploy.sh  lambda_function.py  pyproject.toml  test_scraper.py
.github/workflows/: deploy.yml
CICD/: deploy.sh
db_migrations/: MIGRATION_README.md  cleanup_migration_001.sql  migrate_data_migration_001.py  migration_001_add_parsing_columns.sql
dev/: clear_database.py
terraform/: main.tf  terraform.tfvars.example
tests/: test_scraper.py
