[tool.poetry]
name = "creole-creamery-scraper"
version = "0.1.0"
description = "LLM-powered scraper for Creole Creamery Hall of Fame data"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "scraper"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg2-binary = "^2.9.7"
openai = "^1.3.0"
python-dateutil = "^2.8.2"
beautifulsoup4 = "^4.12.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
